--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="img/website.ico">
   <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <meta name="author" content="862231036">
 
-  <title>John Doe - Business Administration</title>
+  <title>Anna Dinh - Pre-Business</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Anna Dinh</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/annadinh.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,29 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Anna Dinh
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Pre-Business📚</div>
+        <p class="lead mb-4">Hi, my name is Anna Dinh and I currently attend the  University of California, Riverside as a Pre-Business major. My concentration is focused on marketing. My main interests include photography and videography, which are both main components of advertising for a number of companies. In my second or third year of university, I am hoping to obtain an internship within a social media, advertising company, ones similar to Jubilee or Buzzfeed.<br><br>
 
-        Enter bio here<br><br>
+        
+A fun fact about me is that I am bilingual; I know both English and Vietnamese. I also have very strong time management and organizational skills, as a large sum of my peers have pointed out to me. I make sure that my work space is tidy as it allows me to organize my thoughts and use time more efficiently. I got into videography when I was about eight years old in Elementary school; I remember watching videos from multiple creators and wishing that I too could indulge in such an activity. One day, out of the ordinary, I decided to do just that. I watched a number of tutorials and downloaded different software for myself to get familiar with and practice on. From that point on, I had made video editing a main hobby of mine. On the other hand, photography, I had gotten into it a little bit later. My freshman year of High School, I took a photography class that then sparked my interest in photography as a whole; I enjoyed learning about the functions of a digital camera and how to use Photoshop to its fullest potential. I learned about capabilities I was not familiar with before, despite all the online tutorials I had watched. Taking photography was an eye-opening experience for my high school career and definitely kickstarted the beginning of my interest in marketing altogether.
+<br><br>
 
-        Enter bio here
+        Although I may lack experience in the professional field regarding business marketing, I do have experience with softwares such as Sony Vegas Pro, Adobe After Effects, and Adobe Photoshop. As of right now, I am currently employed at a very mainstream, popular tea shop called Tasteas. My intention is to work my way up and to be promoted to supervisor so that I can learn more about managing a business and use my following knowledge for future references. I started the job in the Summer; because of COVID-19 and being unable to dorm or move up to Riverside, I had decided to make use of my time in my hometown, while I am still living in it. I soon found myself applying to a number of different jobs and upon interviewing at Tasteas, I was offered a position the following night and it has been one of the best decisions I have ever made. I strongly believe that obtaining a job during university is very beneficial as it allows you to work on your strength and weaknesses as you pursue your major and begin looking for internships; it provides you with the experience needed to apply to any internship at any firm or company.
+
         </p>
         <div class="social-icons">
-          <a target="_blank" id="linkedin" href="https://linkedin.com">
-            <i class="fab fa-linkedin-in"></i>
+          <a target="_blank" id="instagram" href="https://instagram.com/annadinnh">
+            <i class="fab fa-instagram"></i>
           </a>
-          <a target="_blank" id="github" href="https://github.com">
+          <a target="_blank" id="github" href="https://github.com/adinh028">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="twitter" href="https://twitter.com">
+          <a target="_blank" id="twitter" href="https://twitter.com/annadinnh">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="email" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="email" href="mailto:annaliendinh@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +95,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Barista</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Tea Shop</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Worked the FOH as cashier<br> 
+              • Worked the BOH as cook<br>
+              • Made drinks at a fast-pace<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">August 2020 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Associated Student Body</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.bolsagrande.org/">Bolsa Grande</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Responsible for the school<br>
+              • Led spirit rallies and dances<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">June 2017 - June 2020</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Youtuber</h3>
+            <div class="subheading mb-3"><a target="_blank" href="www.youtube.com">Youtube</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Created and edited in-person videos<br>
+            • Manipulated and created new animations<br>
+            • Taught others what I knew<br>
+            • Advanced to Adobe software<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">January 2008 - January 2020</span>
           </div>
         </div>
 
@@ -151,34 +154,33 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">Jordan Intermediate</h3>
+            <div class="subheading mb-3">7th and 8th Grade</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">June 2014 - June 2016</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
+          <div class="resume-content">
+            <h3 class="mb-0">Bolsa Grande High School</h3>
+            <div class="subheading mb-3">ASB, Yearbook</div>
+            <div>Class of 2020 Graduate</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Pre-Business</div>
+            <div>Concentration in Marketing</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2020 - Present</span>
           </div>
         </div>
 
@@ -191,7 +193,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/image1.jpg" width="500px">
+            <img src="img/image2.jpg" width="500px"><br>
+            <img src="img/image3.jpg" width="500px">
+            <img src="img/image4.jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +204,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Anna Dinh</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
